--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   position: relative;
   min-height: 100vh;
   margin: 0;
+  background-image: url("img/bg.svg");
 }
 
 body::before {
@@ -14,6 +15,11 @@ body::after {
   content: "";
   display: block;
   height: 180px; /* Set same as footer's height */
+}
+
+/* navbar */
+.navbar-bg {
+  /* background-color: #fbcda3; */
 }
 
 /* video background */
@@ -60,7 +66,7 @@ body::after {
 /* footer */
 footer {
   height: 180px;
-  background-color: rgb(49, 49, 49);
+  background-image: url("img/footer.svg");
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -104,4 +110,17 @@ footer {
 /* grid lineup */
 .lineup-image {
   border-radius: 50%;
+}
+
+/* grid ticket */
+.ticket-1 {
+  background-image: linear-gradient(#ebd9c5, #eda88a);
+}
+
+.ticket-2 {
+  background-image: linear-gradient(#f8f3cc, #deb35d);
+}
+
+.ticket-3 {
+  background-image: linear-gradient(#c4efe7, #37b487);
 }
