index.html navbar fix

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body::after {
 
 /* navbar */
 .navbar-bg {
-  /* background-color: #fbcda3; */
+  background-color: #63bac6;
 }
 
 /* video background */
