--- a/style.css
+++ b/style.css
@@ -36,14 +36,19 @@ body::after {
   width: 210px;
   height: 34px;
   position: absolute;
-  background-color: white;
+  background-color: #8BC5C5;
   border-radius: 34px;
   bottom: -17px;
   left: 50%;
   margin-left: -105px;
+  z-index: -20;
 }
 
 /* about atma */
+#about{
+  background-image: url("img/tengah.png");
+
+}
 
 /* slider */
 .carousel-item {
@@ -62,6 +67,8 @@ body::after {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+
 
 /* footer */
 footer {
@@ -142,4 +149,27 @@ footer {
 
 .grid-faq .card {
   border-radius: 32px;
+}
+
+/*live stream*/
+.live-text{
+  border: 0px;
+}
+
+.p-card-live{
+  font-family: Mulish;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0em;
+  text-align: center;
+  font-weight: bold;
+}
+
+/*history*/
+.tmst2020{
+  background-image: url("img/tmst2020.png");
+  background-repeat: no-repeat;
+  /*width: 100%;*/
 }
