--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@ body {
   min-height: 100vh;
   margin: 0;
   background-image: url("img/bg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body::before {
   content: "";
   display: block;
-  height: 60px;
+  height: 59px;
 }
 
 body::after {
