--- a/style.css
+++ b/style.css
@@ -56,14 +56,14 @@ body::after {
 
 @media screen and (max-width: 992px) {
   .about .row {
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 24px;
   }
 }
 
 /* slider */
 .carousel-item {
-  height: 554px;
+  height: auto;
   background: #777;
   position: relative;
 }
