--- a/fixed.css
+++ b/fixed.css
@@ -1,7 +1,8 @@
 /*--- Bootstrap Mobile Gutter Fix --*/
-.row, .container-fluid {
-margin-left: 0px!important;
-margin-right: 0px!important;
+.row,
+.container-fluid {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
 }
 
 /*--- Fixed Video Background iOS/Mobile Style--*/
@@ -13,6 +14,7 @@ margin-right: 0px!important;
   width: 100%;
   height: 100%;
 }
+
 #video {
   position: fixed;
   display: block;
@@ -23,11 +25,12 @@ margin-right: 0px!important;
   background-size: cover;
   background-position: center center;
   -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  transform: translateZ(0);
   will-change: transform;
   z-index: -1000;
 }
-video { 
+
+video {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -37,7 +40,7 @@ video {
   height: auto;
   z-index: -100;
   transform: translateX(-50%) translateY(-50%);
-  background: url('') no-repeat;
+  background: url("") no-repeat;
   background-size: cover;
   transition: 1s opacity;
 }
