--- a/style.css
+++ b/style.css
@@ -52,14 +52,23 @@ body::after {
 .navbar-light .navbar-nav .nav-link {
   color: #695032;
 }
-.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: #EBA848;
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus {
+  color: #eba848;
 }
-
 
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .nav-link.active {
   color: rgba(255, 255, 255, 0.9);
+}
+
+.navbar-light .navbar-toggler {
+  color: rgba(75, 51, 22, 0.55);
+  border-color: rgba(105, 80, 50, 0.1);
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28105, 80, 50, 0.7%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 /* video background */
@@ -275,8 +284,7 @@ footer {
 }
 
 .history-video {
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  border-radius: 3px;
 }
 
 /* Sponsor */
