--- a/style.css
+++ b/style.css
@@ -24,8 +24,12 @@ body::after {
   color: #ffffff;
 }
 
-.collapse-bg,
 .navbar-bg {
+  background-color: rgba(99, 186, 198, 0.9);
+  transition: 1ms;
+}
+
+.collapse-bg {
   background-color: rgba(99, 186, 198, 0.9);
   transition: 1ms;
 }
@@ -48,10 +52,10 @@ body::after {
 .navbar-light .navbar-nav .nav-link {
   color: #695032;
 }
-.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: #EBA848;
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus {
+  color: #eba848;
 }
-
 
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .nav-link.active {
