--- a/style.css
+++ b/style.css
@@ -301,10 +301,10 @@ footer {
 /* danus */
 .grid-danus .card-text {
   text-decoration: none;
-  color: #8ac5c5;
+  color: #F23325;
 }
 
 .grid-danus .card-text:hover {
   text-decoration: none;
-  color: white;
+  color: #1B2E5C;
 }
