--- a/style.css
+++ b/style.css
@@ -124,6 +124,13 @@ body::after {
   }
 }
 
+.grid-gallery {
+  background-image: url(img/bg.svg);
+  background-size: cover;
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+
 /* slider */
 .carousel-item {
   height: auto;
@@ -302,10 +309,10 @@ footer {
 /* danus */
 .grid-danus .card-text {
   text-decoration: none;
-  color: #F23325;
+  color: #f23325;
 }
 
 .grid-danus .card-text:hover {
   text-decoration: none;
-  color: #1B2E5C;
+  color: #1b2e5c;
 }
