--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ body::after {
 /* footer */
 footer {
   height: 180px;
-  background-image: url("img/footer2.svg");
+  background-image: url("img/footer.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
